org.openwms-21 added logback to log all reactive calls; AbstractPreference has to be an entity to be persisted

--- a/org.openwms.core/org.openwms.core.configuration/pom.xml
+++ b/org.openwms.core/org.openwms.core.configuration/pom.xml
@@ -90,6 +90,10 @@
             <artifactId>reactor-core</artifactId>
             <version>2.5.0.M3</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.openwms</groupId>
