--- a/org.openwms.core/org.openwms.core.configuration/src/main/resources/application.properties
+++ b/org.openwms.core/org.openwms.core.configuration/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-openwms.core.config.initial-properties=org/openwms/core/service/spring/initial-preferences.xml
+openwms.core.config.initial-properties=classpath:initial-preferences.xml
 spring.jackson.serialization.fail_on_empty_beans=false
