--- a/pom.xml
+++ b/pom.xml
@@ -440,8 +440,8 @@
         <jdbc.oracle.version>6.0.0</jdbc.oracle.version>
         <jpa-api.version>1.0.0.Final</jpa-api.version>
         <!-- Spring Integration 2.2.4 uses Spring Core 3.1.3 -->
-        <spring.io.version>2.0.5.RELEASE</spring.io.version>
-        <spring-boot.version>1.3.5.RELEASE</spring-boot.version> <!-- Keep in sync with platform -->
+        <spring.io.version>2.1.0.BUILD-SNAPSHOT</spring.io.version>
+        <spring-boot.version>1.4.0.M3</spring-boot.version> <!-- Keep in sync with platform -->
         <spring.version>4.2.6.RELEASE</spring.version> <!-- Keep in sync with platform -->
         <start-class></start-class> <!-- set by actual boot module -->
         <!-- =================== -->
@@ -483,6 +483,22 @@
             <id>ameba-bintray</id>
             <name>Ameba Bintray Repository</name>
             <url>https://dl.bintray.com/abraxas/labs</url>
+        </repository>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/libs-milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>spring-snapshots</id>
+            <name>Spring Snapshots</name>
+            <url>https://repo.spring.io/libs-snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
@@ -582,9 +598,12 @@
                         </systemPropertyVariables>
                         <includes>
                             <include>**/*Test.java</include>
+                            <include>**/*IT.java</include>
+                            <include>**/*Documentation.java</include>
                         </includes>
                         <excludes>
                             <exclude>**/Abstract*.java</exclude>
+                            <exclude>**/*Tests.java</exclude>
                         </excludes>
                     </configuration>
                     <dependencies>
@@ -644,11 +663,18 @@
                 <version>${el-impl.version}</version>
             </dependency>
 
-            <!-- Spring Framework Libraries -->
+            <!-- Spring Framework Libraries >
             <dependency>
                 <groupId>io.spring.platform</groupId>
                 <artifactId>platform-bom</artifactId>
                 <version>${spring.io.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>1.4.0.M3</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
