--- a/org.openwms.core/pom.xml
+++ b/org.openwms.core/pom.xml
@@ -86,6 +86,14 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Brixton.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
 	        <!-- Project dependencies -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
