--- a/org.openwms.common/org.openwms.common.domain/pom.xml
+++ b/org.openwms.common/org.openwms.common.domain/pom.xml
@@ -69,6 +69,11 @@
         </dependency>
 
         <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.test</artifactId>
             <version>${core.version}</version>
