--- a/org.openwms.wms/pom.xml
+++ b/org.openwms.wms/pom.xml
@@ -35,6 +35,7 @@
     <name>OpenWMS.org WMS</name>
     <properties>
         <moduleDir>../..</moduleDir>
+        <maven.test.skip>true</maven.test.skip>
         <app.version>1.1.0-SNAPSHOT</app.version>
         <core.version>1.1.0-SNAPSHOT</core.version>
         <common.version>1.1.0-SNAPSHOT</common.version>
