#40 fixed RoleIT test by fixing the infrastructure test setip

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,4 @@ node_js:
   - '0.10'
 before_script:
   - 'npm install -g bower'
-script:
-  - mvn install -Denforcer.skip=true
+install: "mvn install -Denforcer.skip=true"
