#40 added core bom

--- a/org.openwms.common/pom.xml
+++ b/org.openwms.common/pom.xml
@@ -83,6 +83,16 @@
 
     <dependencyManagement>
         <dependencies>
+
+            <!-- Core dependencies -->
+            <dependency>
+                <groupId>org.openwms</groupId>
+                <artifactId>org.openwms.core</artifactId>
+                <version>${core.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <!-- Project dependencies -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
