--- a/org.openwms.common/org.openwms.common.domain/pom.xml
+++ b/org.openwms.common/org.openwms.common.domain/pom.xml
@@ -67,6 +67,7 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.uaa</artifactId>
             <version>${core.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
