--- a/org.openwms.core/org.openwms.core.bom/pom.xml
+++ b/org.openwms.core/org.openwms.core.bom/pom.xml
@@ -30,11 +30,10 @@
         <artifactId>org.openwms</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>org.openwms.core</artifactId>
+    <artifactId>org.openwms.core.bom</artifactId>
     <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>OpenWMS.org CORE</name>
-    <description>The CORE project Maven POM file. Just a common definition of dependencies valid for all other CORE projects. Call mvn install -Pcore to build all CORE projects.</description>
+    <name>OpenWMS.org CORE BOM</name>
     <properties>
         <moduleDir>../..</moduleDir>
         <module.version>${project.version}</module.version>
@@ -54,49 +53,8 @@
         <developerConnection>scm:git:git@github.com:openwms/org.openwms.git</developerConnection>
     </scm>
 
-    <profiles>
-        <profile>
-            <id>all</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <modules>
-                <module>org.openwms.core.bom</module>
-                <module>org.openwms.core.configuration</module>
-                <module>org.openwms.core.domain</module>
-                <module>org.openwms.core.lang</module>
-                <module>org.openwms.core.search</module>
-                <module>org.openwms.core.test</module>
-                <module>org.openwms.core.uaa</module>
-                <module>org.openwms.core.util</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>core</id>
-            <modules>
-                <module>org.openwms.core.bom</module>
-                <module>org.openwms.core.configuration</module>
-                <module>org.openwms.core.domain</module>
-                <module>org.openwms.core.lang</module>
-                <module>org.openwms.core.search</module>
-                <module>org.openwms.core.test</module>
-                <module>org.openwms.core.uaa</module>
-                <module>org.openwms.core.util</module>
-            </modules>
-        </profile>
-    </profiles>
-
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Brixton.RELEASE</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-	        <!-- Project dependencies -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.core.configuration</artifactId>
@@ -136,5 +94,4 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
 </project>
