add hibernate core manually because of CNFE only on travis

--- a/org.openwms.core/org.openwms.core.configuration/pom.xml
+++ b/org.openwms.core/org.openwms.core.configuration/pom.xml
@@ -85,6 +85,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-oxm</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <scope>compile</scope>
+        </dependency>
 
         <!-- Currently in test -->
         <dependency>
