#40 fixed compile errors in depending modules

--- a/pom.xml
+++ b/pom.xml
@@ -640,11 +640,11 @@
             </plugins>
         </pluginManagement>
 
-        <plugins>
+        <!--plugins>
             <plugin>
                 <artifactId>maven-enforcer-plugin</artifactId>
             </plugin>
-        </plugins>
+        </plugins-->
     </build>
 
     <dependencyManagement>
