#40 module o.o.c.domain and o.o.c.util is not used anymore

--- a/org.openwms.common/org.openwms.common.comm/pom.xml
+++ b/org.openwms.common/org.openwms.common.comm/pom.xml
@@ -59,7 +59,7 @@
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.domain</artifactId>
+            <artifactId>org.openwms.common.service</artifactId>
         </dependency>
     </dependencies>
 </project>
