--- a/org.openwms.wms/org.openwms.wms.service/pom.xml
+++ b/org.openwms.wms/org.openwms.wms.service/pom.xml
@@ -64,7 +64,7 @@
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.rest</artifactId>
+            <artifactId>org.openwms.common.service</artifactId>
             <version>${common.version}</version>
         </dependency>
 
@@ -79,12 +79,6 @@
             <artifactId>org.openwms.core.test</artifactId>
             <version>${core.version}</version>
             <type>test-jar</type>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.core.service.spring</artifactId>
-            <version>${core.version}</version>
             <scope>test</scope>
         </dependency>
 	</dependencies>
