--- a/org.openwms.common/org.openwms.common.service/pom.xml
+++ b/org.openwms.common/org.openwms.common.service/pom.xml
@@ -83,6 +83,17 @@
         </dependency>
 
         <dependency>
+            <groupId>com.eventsourcing</groupId>
+            <artifactId>eventsourcing-core</artifactId>
+            <version>0.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.eventsourcing</groupId>
+            <artifactId>eventsourcing-h2</artifactId>
+            <version>0.3.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.test</artifactId>
             <version>${core.version}</version>
@@ -90,4 +101,11 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>es4j</id>
+            <url>http://dl.bintray.com/eventsourcing/maven</url>
+        </repository>
+    </repositories>
 </project>
