--- a/org.openwms.common/pom.xml
+++ b/org.openwms.common/pom.xml
@@ -37,7 +37,6 @@
     <properties>
         <moduleDir>../..</moduleDir>
         <core.version>${project.version}</core.version>
-        <module.version>${project.version}</module.version>
         <maven.test.skip>true</maven.test.skip>
     </properties>
 
@@ -90,7 +89,7 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.common.service</artifactId>
-                <version>${module.version}</version>
+                <version>${project.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
