#63 worked on unit test for domain logic in TransportUnit and TransportUnitTypes, enables tests

--- a/org.openwms.common/pom.xml
+++ b/org.openwms.common/pom.xml
@@ -37,7 +37,7 @@
     <properties>
         <moduleDir>../..</moduleDir>
         <core.version>${project.version}</core.version>
-        <maven.test.skip>true</maven.test.skip>
+        <maven.test.skip>false</maven.test.skip>
     </properties>
 
     <distributionManagement>
