--- a/org.openwms.tms/pom.xml
+++ b/org.openwms.tms/pom.xml
@@ -63,19 +63,13 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <modules>
-                <module>org.openwms.tms.domain</module>
-                <module>org.openwms.tms.rest</module>
-                <module>org.openwms.tms.service</module>
-                <module>org.openwms.tms.util</module>
+                <module>org.openwms.tms.transportation</module>
             </modules>
         </profile>
         <profile>
             <id>tms</id>
             <modules>
-                <module>org.openwms.tms.domain</module>
-                <module>org.openwms.tms.rest</module>
-                <module>org.openwms.tms.service</module>
-                <module>org.openwms.tms.util</module>
+                <module>org.openwms.tms.transportation</module>
             </modules>
         </profile>
     </profiles>
@@ -84,23 +78,15 @@
         <dependencies>
             <!-- Project dependencies -->
             <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.tms.util</artifactId>
-                <version>${module.version}</version>
+                <groupId>org.openwms</groupId>
+                <artifactId>org.openwms.core</artifactId>
+                <version>${core.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.tms.domain</artifactId>
-                <version>${module.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.tms.rest</artifactId>
-                <version>${module.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.tms.service</artifactId>
+                <artifactId>org.openwms.tms.transportation</artifactId>
                 <version>${module.version}</version>
             </dependency>
         </dependencies>
