--- a/pom.xml
+++ b/pom.xml
@@ -263,8 +263,8 @@
             <modules>
                 <module>org.openwms.core</module>
                 <module>org.openwms.common</module>
-                <!--module>org.openwms.tms</module>
-                <module>org.openwms.wms</module>
+                <module>org.openwms.tms</module>
+                <!--module>org.openwms.wms</module>
                 <module>org.openwms.app</module-->
             </modules>
         </profile>
