--- a/org.openwms.tms/org.openwms.tms.transportation/pom.xml
+++ b/org.openwms.tms/org.openwms.tms.transportation/pom.xml
@@ -34,7 +34,8 @@
     <name>${project.artifactId}</name>
     <properties>
         <moduleDir>../../..</moduleDir>
-        <spring-cloud-contract-dependencies.version>1.0.0.M1</spring-cloud-contract-dependencies.version>
+        <spring-cloud-dependencies.version>Brixton.SR4</spring-cloud-dependencies.version>
+        <spring-restdocs-mockmvc.version>1.1.1.RELEASE</spring-restdocs-mockmvc.version>
     </properties>
 
     <dependencyManagement>
@@ -42,14 +43,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Brixton.BUILD-SNAPSHOT</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-contract-dependencies</artifactId>
-                <version>${spring-cloud-contract-dependencies.version}</version>
+                <version>${spring-cloud-dependencies.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -91,14 +85,9 @@
             <artifactId>spring-cloud-starter-ribbon</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-contract-verifier</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.restdocs</groupId>
             <artifactId>spring-restdocs-mockmvc</artifactId>
-            <version>1.1.1.RELEASE</version>
+            <version>${spring-restdocs-mockmvc.version}</version>
             <scope>test</scope>
         </dependency>
 
