--- a/pom.xml
+++ b/pom.xml
@@ -431,7 +431,7 @@
         <!-- =================== -->
         <!-- Dependency versions -->
         <!-- =================== -->
-        <ameba-lib.version>1.6.M2</ameba-lib.version>
+        <ameba-lib.version>1.6</ameba-lib.version>
         <dozer.version>5.5.1</dozer.version>
         <el-impl.version>2.2</el-impl.version>
 
@@ -441,8 +441,8 @@
         <jpa-api.version>1.0.0.Final</jpa-api.version>
         <!-- Spring Integration 2.2.4 uses Spring Core 3.1.3 -->
         <spring.io.version>2.1.0.BUILD-SNAPSHOT</spring.io.version>
-        <spring-boot.version>1.4.0.BUILD-SNAPSHOT</spring-boot.version> <!-- Keep in sync with platform -->
-        <spring.version>4.3.2.BUILD-SNAPSHOT</spring.version> <!-- Keep in sync with platform -->
+        <spring-boot.version>1.4.0.RELEASE</spring-boot.version> <!-- Keep in sync with platform -->
+        <spring.version>4.3.2.RELEASE</spring.version> <!-- Keep in sync with platform -->
         <start-class></start-class> <!-- keep it empty, set by actual boot module -->
         <validation-api.version>1.1.0.Final</validation-api.version>
         <!-- =================== -->
