--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ node_js:
   - '0.10'
 before_script:
   - 'npm install -g bower'
-install: "mvn install -U -Denforcer.skip=true"
+install: "mvn clean install -U -Denforcer.skip=true"
