--- a/org.openwms.core/pom.xml
+++ b/org.openwms.core/pom.xml
@@ -88,7 +88,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Brixton.RELEASE</version>
+                <version>Brixton.SR4</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
