--- a/org.openwms.core/org.openwms.core.bom/pom.xml
+++ b/org.openwms.core/org.openwms.core.bom/pom.xml
@@ -27,7 +27,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.openwms</groupId>
-        <artifactId>org.openwms</artifactId>
+        <artifactId>org.openwms.core</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.core.bom</artifactId>
