--- a/org.openwms.tms/org.openwms.tms.transportation/pom.xml
+++ b/org.openwms.tms/org.openwms.tms.transportation/pom.xml
@@ -38,14 +38,14 @@
         <spring-restdocs-mockmvc.version>1.1.1.RELEASE</spring-restdocs-mockmvc.version>
     </properties>
 
-    <build>
+    <!--build>
         <plugins>
             <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
             </plugin>
         </plugins>
-    </build>
+    </build-->
 
     <dependencyManagement>
         <dependencies>
