--- a/org.openwms.common/org.openwms.common.service/pom.xml
+++ b/org.openwms.common/org.openwms.common.service/pom.xml
@@ -35,6 +35,7 @@
     <properties>
         <moduleDir>../../..</moduleDir>
         <eventsourcing.version>0.3.1</eventsourcing.version>
+        <commons-lang3.version>3.4</commons-lang3.version>
     </properties>
     <dependencies>
         <!-- Spring Framework -->
@@ -80,6 +81,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.eventsourcing</groupId>
                 <artifactId>eventsourcing-core</artifactId>
