--- a/pom.xml
+++ b/pom.xml
@@ -409,7 +409,12 @@
     <properties>
         <moduleDir>.</moduleDir>
         <!-- used by surefire plugin in combination with jacoco -->
-        <argLine></argLine>
+        <argLine><![CDATA[-Dcatalina.base=${project.build.directory}
+        -Dorg.springframework.restdocs.outputDir=${project.build.directory}/generated-snippets
+        -Ddocumentation.dir=${project.build.directory}/generated-snippets
+        -Dorg.jboss.logging.provider=slf4j
+        -Dfile.encoding=${project.build.sourceEncoding}]]>
+        </argLine>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
 
@@ -422,6 +427,7 @@
         <ci.buildNumber>MANUAL</ci.buildNumber>
         <documentation.dir>${project.build.directory}</documentation.dir>
         <documentation.snippet.dir>${documentation.dir}/generated-snippets</documentation.snippet.dir>
+        <snippetsDirectory>${documentation.snippet.dir}</snippetsDirectory>
         <documentation.input.dir>${documentation.dir}/generated-docs</documentation.input.dir>
         <documentation.output.dir>${documentation.dir}/site/rest</documentation.output.dir>
 
@@ -679,14 +685,11 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${plugin.surefire.version}</version>
                     <configuration>
-                        <forkCount>0</forkCount>
+                        <!--forkCount>0</forkCount>
                         <threadCount>1</threadCount>
                         <useSystemClassLoader>true</useSystemClassLoader>
                         <skipTests>false</skipTests>
-                        <trimStackTrace>true</trimStackTrace>
-                        <systemPropertyVariables>
-                            <log4j.configuration>log4j.xml</log4j.configuration>
-                        </systemPropertyVariables>
+                        <trimStackTrace>true</trimStackTrace-->
                         <includes>
                             <include>**/*Test.java</include>
                             <include>**/*IT.java</include>
