--- a/org.openwms.common/org.openwms.common.service/pom.xml
+++ b/org.openwms.common/org.openwms.common.service/pom.xml
@@ -37,6 +37,20 @@
         <eventsourcing.version>0.3.1</eventsourcing.version>
         <commons-lang3.version>3.4</commons-lang3.version>
     </properties>
+    <profiles>
+        <profile>
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>com.h2database</groupId>
+                    <artifactId>h2</artifactId>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
     <dependencies>
         <!-- Spring Framework -->
         <dependency>
@@ -55,17 +69,11 @@
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.core.test</artifactId>
-            <type>test-jar</type>
-            <scope>test</scope>
+            <artifactId>org.openwms.common.shared</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.util</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.core.uaa</artifactId>
         </dependency>
 
         <dependency>
@@ -76,6 +84,13 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.test</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
