--- a/org.openwms.common/pom.xml
+++ b/org.openwms.common/pom.xml
@@ -63,6 +63,7 @@
             <modules>
                 <module>org.openwms.common.comm</module>
                 <module>org.openwms.common.service</module>
+                <module>org.openwms.common.shared</module>
             </modules>
         </profile>
         <profile>
@@ -70,6 +71,7 @@
             <modules>
                 <module>org.openwms.common.comm</module>
                 <module>org.openwms.common.service</module>
+                <module>org.openwms.common.shared</module>
             </modules>
         </profile>
     </profiles>
@@ -89,6 +91,11 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.common.service</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>org.openwms.common.shared</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
